<resources>
    <string name="app_name">mvpdemo</string>

    <!--Guide 页面-->
    <string name="leada_text1">Guide a text 1....</string>
    <string name="leada_text2">Guide a text 2....</string>
    <string name="leadb_text1">Guide b text 1....</string>
    <string name="leadb_text2">Guide b text 2....</string>
    <string name="leadc_text1">Guide c text 1....</string>
    <string name="leadc_text2">Guide c text 2....</string>
    <string name="leadd_text1">Guide d text 1....</string>
    <string name="leadd_text2">Guide d text 2....</string>
    <string name="leade_text1">Guide e text 1....</string>
    <string name="leade_text2">Guide e text 2....</string>

    <string name="main_one">发现</string>
    <string name="main_two">视频</string>
    <string name="main_three">我的</string>
    <string name="main_four">朋友</string>
    <string name="main_five">账号</string>
</resources>