<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:paddingBottom="5dp"
    android:gravity="center"
    android:background="#FFFFFF"
    android:orientation="horizontal">
    <LinearLayout
        android:id="@+id/tab_linear_one"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="0.2"
        android:background="#00000000"
        android:orientation="vertical">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E9EDEF" />
        <ImageView
            android:id="@+id/toolbar_tabone"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="3dp"
            android:background="#0000" />

        <TextView
            android:id="@+id/toolbar_tabone_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#0000"
            android:gravity="center"
            android:text="@string/main_one"
            android:textSize="12sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/tab_linear_two"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="0.2"
        android:background="#00000000"
        android:orientation="vertical">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E9EDEF" />
        <ImageView
            android:id="@+id/toolbar_tabtwo"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginTop="3dp"
            android:background="#00000000"
            android:paddingTop="3dp" />

        <TextView
            android:id="@+id/toolbar_tabtwo_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#0000"
            android:gravity="center"
            android:text="@string/main_two"
            android:textSize="12sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/tab_linear_three"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="0.2"
        android:background="#00000000"
        android:orientation="vertical">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E9EDEF" />
        <ImageView
            android:id="@+id/toolbar_tabthree"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginTop="3dp"
            android:background="#00000000"
            android:paddingTop="3dp" />

        <TextView
            android:id="@+id/toolbar_tabthree_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#0000"
            android:gravity="center"
            android:text="@string/main_three"
            android:textSize="12sp" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.2">


        <LinearLayout
            android:id="@+id/tab_linear_four"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:background="#00000000"
            android:orientation="vertical">
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#E9EDEF" />
            <ImageView
                android:id="@+id/toolbar_tabfour"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:background="#00000000"
                android:layout_marginTop="3dp"
                android:paddingTop="3dp" />

            <TextView
                android:id="@+id/toolbar_tabfour_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#0000"
                android:gravity="center"
                android:text="@string/main_four"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/shopping_cart_num_bg"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="3dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/shopping_cart_num"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginBottom="2dp"
                android:visibility="invisible"/>
        </LinearLayout>
    </FrameLayout>


    <LinearLayout
        android:id="@+id/tab_linear_five"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.2"
        android:background="#00000000"
        android:orientation="vertical">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E9EDEF" />
        <ImageView
            android:id="@+id/toolbar_tabfive"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginTop="3dp"
            android:background="#0000"
            android:paddingTop="3dp" />

        <TextView
            android:id="@+id/toolbar_tabfive_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#0000"
            android:gravity="center"
            android:text="@string/main_five"
            android:textColor="#06F"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>
